# Python_Project

./: README.md  pyproject.toml
app/: main.py
app/pipeline/: extract.py  transform.py
tests/: test_pipeline.py
