[tool.poetry]
name = "python-project"
version = "0.1.0"
description = "projeto de ETL"
authors = ["Matheus <mmont9594@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
pandas = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
